js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-if-import-source-no-rest-param.js
DONOTEVALUATE
(
)
;
if
(
true
)
{
import
.
source
(
.
.
.
[
'
<
module
source
>
'
]
)
;
}
